scripts/k8s/cloud-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-gateway-app
  labels:
    app: cloud-gateway-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-gateway-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cloud-gateway-app
    spec:
      containers:
        - image: sedokray/gateway-proxy:0.0.1-SNAPSHOT
          name: gateway-proxy
          ports:
            - containerPort: 8700
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-gateway-svc
  labels:
    app: cloud-gateway-app
spec:
  selector:
    app: cloud-gateway-app
  type: LoadBalancer
  ports:
    - port: 8700
      targetPort: 8700
      protocol: TCP
