scripts/k8s/eureka-server.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka
  labels:
    app: eureka
spec:
  selector:
    app: eureka
  clusterIP: None
  ports:
    - port: 8761
      name: eureka
      targetPort: 8761

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
  labels:
    app: web
spec:
  serviceName: "eureka"
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka-server
          image: sedokray/eureka-server:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-lb
  labels:
    app: eureka
spec:
  selector:
    app: eureka
  type: NodePort
  ports:
    - port: 8100
      targetPort: 8761
      nodePort: 303011
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: eureka-svc
  labels:
    app: eureka
spec:
  selector:
    app: eureka
  type: ExternalName
  externalName: eureka.store.com
  ports:
    - port: 80
      targetPort: 8761
      protocol: TCP
