scripts/k8s/inventory-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service-app
  labels:
    app: inventory-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: inventory-service-app
    spec:
      containers:
        - image: sedokray/inventory-service:0.0.1-SNAPSHOT
          name: inventory-service
          ports:
            - containerPort: 8082
      initContainers: # waiting to initialise other service before creating pod
        - name: init-eureka
          image: busybox:1.28
          command: ['sh', '-c', "until nslookup eureka.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo en attente de eureka; sleep 2; done"]
        - name: init-config-server-svc
          image: busybox:1.28
          command: ['sh', '-c', "until nslookup config-server-svc.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo en attente de config-server-svc; sleep 2; done"]
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service-svc
  labels:
    app: inventory-service-app
spec:
  selector:
    app: inventory-service-app
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
